--- a/tasks/bird_install.yml
+++ b/tasks/bird_install.yml
@@ -13,14 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- include_tasks: "bird_install_{{ ansible_pkg_mgr }}.yml"
+- include_tasks: "bird_install_{{ ansible_facts['pkg_mgr'] }}.yml"
 
 - name: Install bird packages
   package:
     name: "{{ bird_packages }}"
     state: "{{ bird_package_state }}"
-    update_cache: "{{ (ansible_pkg_mgr in ['apt', 'zypper']) | ternary('yes', omit) }}"
-    cache_valid_time: "{{ (ansible_pkg_mgr == 'apt' and not add_repos is changed) | ternary(cache_timeout, omit) }}"
+    update_cache: "{{ (ansible_facts['pkg_mgr'] in ['apt', 'zypper']) | ternary('yes', omit) }}"
+    cache_valid_time: "{{ (ansible_facts['pkg_mgr'] == 'apt' and not add_repos is changed) | ternary(cache_timeout, omit) }}"
   register: install_packages
   until: install_packages is success
   retries: 5
