--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -23,7 +23,7 @@ bird_keys:
 
 bird_apt_repo_url: http://bird.network.cz/debian/
 bird_repo:
-  repo: "deb {{ bird_apt_repo_url }} {{ ansible_distribution_release }} main"
+  repo: "deb {{ bird_apt_repo_url }} {{ ansible_facts['distribution_release'] }} main"
   state: "present"
 
 bird_required_packages: []
