--- a/vars/ubuntu.yml
+++ b/vars/ubuntu.yml
@@ -24,7 +24,7 @@ bird_keys:
 
 bird_apt_repo_url: "http://ppa.launchpad.net/cz.nic-labs/bird/ubuntu"
 bird_repo:
-  repo: "deb {{ bird_apt_repo_url }} {{ ansible_distribution_release }} main"
+  repo: "deb {{ bird_apt_repo_url }} {{ ansible_facts['distribution_release'] }} main"
   state: "present"
 
 bird_required_packages: []
